Fix issue with navbar covering content when scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,10 @@ p {
 	margin-bottom: 1.8em;
 }
 
+h2 {
+	padding-top: 72px;
+}
+
 h2,
 h3,
 nav a,
